docs: interfaces and unions

--- a/docs/pages/docs/core-concepts/type-safety-and-type-integration.mdx
+++ b/docs/pages/docs/core-concepts/type-safety-and-type-integration.mdx
@@ -182,6 +182,7 @@ export default app
 Pylon translates these TypeScript definitions into corresponding GraphQL types:
 
 - **Types and Interfaces**: Both are mapped to GraphQL object types.
+- **Unions**: Represented as GraphQL union types.
 - **Enums**: Mapped directly to GraphQL enums.
 - **Classes**: Mapped to GraphQL object types, similar to interfaces and types.
 - **Functions**: Used to define the resolver logic for your queries and mutations, with TypeScript types ensuring the correctness of inputs and outputs.
