--- a/docs/pages/blog/pylon-2.3.mdx
+++ b/docs/pages/blog/pylon-2.3.mdx
@@ -158,6 +158,10 @@ export default app
 
 This will generate a GraphQL schema that includes a `Node` interface implemented by both `User` and `Post` types, allowing for flexible querying of these types.
 
+## Example Project
+
+To see these features in action, check out our [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) that demonstrates the use of TypeScript interfaces and unions.
+
 ## Conclusion
 
 We're excited to see what you'll build with these new capabilities. As always, we're committed to making Pylon the most developer-friendly way to create GraphQL APIs with TypeScript.
