--- a/docs/pages/docs/core-concepts/interfaces-and-unions.mdx
+++ b/docs/pages/docs/core-concepts/interfaces-and-unions.mdx
@@ -298,6 +298,10 @@ When working with interfaces and unions in Pylon, consider the following best pr
 5. **Use type inference judiciously**: While Pylon's type inference is powerful, explicitly defining your types can often lead to clearer, more maintainable code, especially in larger projects.
 6. **Consider performance**: Remember that using interfaces and unions can sometimes lead to less efficient queries if not used carefully. Monitor your API's performance and optimize as necessary.
 
+## Example Project
+
+To see these features in action, check out our [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) that demonstrates the use of TypeScript interfaces and unions.
+
 ## Conclusion
 
 Pylon's support for interfaces and unions brings the full power of TypeScript's type system to your GraphQL API. By automatically translating TypeScript interfaces and unions into GraphQL schemas, Pylon simplifies the process of defining complex types and relationships.
