--- a/docs/pages/docs/release-notes/v2.3.mdx
+++ b/docs/pages/docs/release-notes/v2.3.mdx
@@ -153,6 +153,10 @@ export default app
 
 This will generate a GraphQL schema that includes a `Node` interface implemented by both `User` and `Post` types, allowing for flexible querying of these types.
 
+## Example Project
+
+To see these features in action, check out our [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) that demonstrates the use of TypeScript interfaces and unions.
+
 ## Acknowledgements
 
 A big **thank you** to all who helped with this release 💛
