docs: update example project text for interfaces and unions

--- a/docs/pages/blog/pylon-2.3.mdx
+++ b/docs/pages/blog/pylon-2.3.mdx
@@ -160,7 +160,7 @@ This will generate a GraphQL schema that includes a `Node` interface implemented
 
 ## Example Project
 
-To see these features in action, check out our [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) that demonstrates the use of TypeScript interfaces and unions.
+To give you a deeper insight, we have built an [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) in which the new interface and union types are used. Feel free to check it out and experiment with the new features.
 
 ## Conclusion
 
