--- a/docs/pages/docs/core-concepts/interfaces-and-unions.mdx
+++ b/docs/pages/docs/core-concepts/interfaces-and-unions.mdx
@@ -300,7 +300,7 @@ When working with interfaces and unions in Pylon, consider the following best pr
 
 ## Example Project
 
-To see these features in action, check out our [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) that demonstrates the use of TypeScript interfaces and unions.
+To give you a deeper insight, we have built an [example project](https://github.com/getcronit/pylon/tree/main/examples/interfaces-and-unions) in which the new interface and union types are used. Feel free to check it out and experiment with the new features.
 
 ## Conclusion
 
