feat(docs): Improve blog list appearance
- Puts each blog page into a card containing the blog's description, the title, and the publishing date
- Uses two new attributes for blog pages: date (fomated Date) and new (boolean if this blog entry is the latest one)

--- a/docs/pages/blog/pylon-2.0.mdx
+++ b/docs/pages/blog/pylon-2.0.mdx
@@ -1,5 +1,7 @@
 ---
 description: 'Pylon v2 introduces the support for different runtimes, a new create command, and an improved development server.'
+date: 'October 10th, 2024'
+new: true
 ---
 
 import Authors, {Author} from '@components/authors'
