docs: improve blog list page design (#46)
* feat(docs): Add basic building-with-pylon-guide

- Adds new images for guide
- Adds all chapter pages to the guide
- Adds a first version of the introduction page
- Adds a first version of the in-memory-setup page

* feat(docs): Update building with pylon guide

- Adds a conclusion part to the first guide chapter

* feat(docs): Update building with pylon guide

- Makes the code snippets copyable
- Adds a info callout for method arguments

* feat(docs): Update building with pylon guide

- Adds the external api chapter

* feat(docs): Update building with pylon guide

- Adds the Integrating Prisma chapter

* feat(docs): Update building with pylon guide

- Renames "In Memory Setup" chapter to "Hardcoded Data"
- Renames image files to make the naming more consistent
- Adds a "Summary" chapter
- Fixes typos and outdated links

* feat(docs): Update building with pylon guide

- Corrects a localhost url in the "integrating prisma" chapter

* feat(docs): Update building with pylon guide

- Add API endpoint url
- Specify correct return value for getting booking ids from the external api and use a try catch block

* Update docs/pages/docs/guides/building-with-pylon/introduction.mdx

Co-authored-by: Nico Schett <52858351+schettn@users.noreply.github.com>

* Update docs/pages/docs/guides/building-with-pylon/integrating-prisma.mdx

Co-authored-by: Nico Schett <52858351+schettn@users.noreply.github.com>

* Update docs/pages/docs/guides/building-with-pylon/summary.mdx

Co-authored-by: Nico Schett <52858351+schettn@users.noreply.github.com>

* feat(docs): Improve blog list appearance

- Puts each blog page into a card containing the blog's description, the title, and the publishing date
- Uses two new attributes for blog pages: date (fomated Date) and new (boolean if this blog entry is the latest one)

* feat(dogs): Improve blog list page

- There is now a new component PagePreviewC

--- a/docs/pages/blog/pylon-1.0.mdx
+++ b/docs/pages/blog/pylon-1.0.mdx
@@ -1,5 +1,6 @@
 ---
 description: 'Almost two years of development, countless hours of testing, and a lot of love and passion have gone into the creation of Pylon 1.0. We are excited to share this milestone with you and look forward to seeing how Pylon will revolutionize your GraphQL development experience.'
+date: 'August 6th, 2024'
 ---
 
 import Authors, {Author} from '@components/authors'
