docs: update latest blog post

--- a/docs/pages/blog/pylon-2.3.mdx
+++ b/docs/pages/blog/pylon-2.3.mdx
@@ -1,5 +1,7 @@
 ---
 description: 'Pylon v2.3 introduces full support for TypeScript interfaces and unions, making it easier to define complex type hierarchies in your GraphQL schemas.'
+date: 'November 4th, 2024'
+new: true
 ---
 
 import Authors, {Author} from '@components/authors'
