docs: update acknowledgements to v2.4 release notes

--- a/docs/pages/docs/release-notes/v2.4.mdx
+++ b/docs/pages/docs/release-notes/v2.4.mdx
@@ -64,4 +64,6 @@ To help you get started, we've created an [example project](https://github.com/g
 
 ## Acknowledgements
 
+A big thank you to all who helped with this release 💛
+
 - [@shoma-mano](https://github.com/shoma-mano) for his question about global error handling, which inspired us to add Envelop plugin support.
