docs: add deno as supported runtime

--- a/docs/pages/docs/faq.mdx
+++ b/docs/pages/docs/faq.mdx
@@ -105,4 +105,4 @@ If you encounter any issues or have suggestions for improvement, please feel fre
 ~~Currently, Pylon supports the [Bun](https://bun.sh) runtime. However, we have a open issue to support this [Runtimes](https://hono.dev/docs/getting-started/basic).~~
 ~~If you would like to see support for other runtimes, please let us know by upvoting [this issue](https://github.com/getcronit/pylon/issues/6) on GitHub.~~
 
-As of Pylon v2, the framework now supports multiple runtimes, including Bun, Node.js and Cloudflare Workers. Other runtimes are also supported but require manual setup. For more information on the supported runtimes, refer to the [release notes](/docs/release-notes/v2.0.mdx).
+As of Pylon v2, the framework now supports multiple runtimes, including Bun, Node.js, Cloudflare Workers and Deno. Other runtimes are also supported but require manual setup. For more information on the supported runtimes, refer to the [release notes](/docs/release-notes/v2.0.mdx).
