--- a/docs/pages/docs/getting-started.mdx
+++ b/docs/pages/docs/getting-started.mdx
@@ -51,8 +51,8 @@ npm create pylon my-pylon@latest
 ```
 
 <Callout type="note" title="Info">
-  Pylon now supports multiple runtimes, including Node.js, Bun and Cloudflare
-  Workers.
+  Pylon now supports multiple runtimes, including Node.js, Bun, Cloudflare
+  Workers, and Deno.
 </Callout>
 
 This will create a new directory called `my-pylon` with a basic Pylon project structure.
