--- a/docs/pages/docs/core-concepts/context-management.mdx
+++ b/docs/pages/docs/core-concepts/context-management.mdx
@@ -13,7 +13,7 @@ Pylon leverages [Hono](https://hono.dev/), a fast and lightweight web framework,
 The `app` instance in Pylon represents the Hono application and provides a central point for defining routes, middleware, and other application-specific configurations. By accessing the `app` instance, you can define custom logic and behavior tailored to your application's requirements.
 
 ```typescript
-import {app, PylonAPI} from '@getcronit/pylon'
+import {app} from '@getcronit/pylon'
 
 export const graphql = {
   Query: {
