--- a/docs/pages/docs/core-concepts/built-in-authentication-and-authorization.mdx
+++ b/docs/pages/docs/core-concepts/built-in-authentication-and-authorization.mdx
@@ -2,37 +2,59 @@ import {Callout} from '@components/callout'
 
 # Built-in Authentication and Authorization
 
-Discover how Pylon simplifies user authentication and authorization with its comprehensive built-in features, empowering you to secure your web services effortlessly.
+Pylon now offers an enhanced, streamlined authentication system. With this update, the auth endpoint automatically creates routes for **/auth/login**, **/auth/callback**, and **/auth/logout**. When a user authenticates, Pylon sets an `auth` object in the context variables and automatically manages a cookie with the token—simplifying session management and ensuring a secure experience.
+
+---
 
 ## General Setup
 
-Before diving into authentication and authorization with Pylon, it's essential to set up your environment and configure the necessary components. Pylon's built-in authentication system follows the OIDC standard and is currently tightly integrated with ZITADEL for user management and access control.
+Before you begin, configure your environment to integrate with your authentication provider (e.g., ZITADEL). The new configuration uses the `useAuth` plugin to initialize authentication routes and settings.
 
-1. **Environment Variables:**
-   Ensure you have the required environment variables set up in your project:
+```typescript
+import {
+  app,
+  PylonConfig,
+  requireAuth,
+  useAuth,
+  authMiddleware
+} from '@getcronit/pylon'
 
-   ```
-   AUTH_ISSUER=https://test-0o6zvq.zitadel.cloud
-   AUTH_PROJECT_ID=<your_auth_project_id>
-   ```
+export const config: PylonConfig = {
+  plugins: [
+    useAuth({
+      issuer: 'https://test-0o6zvq.zitadel.cloud',
+      endpoint: '/auth', // optional, default is '/auth'
+      keyPath: 'key.json' // optional, default is 'key.json'
+    })
+  ]
+}
+```
 
-2. **Integration with ZITADEL:**
-   To enable Pylon to authenticate users and manage access control, you need to integrate it with ZITADEL. Follow the documentation provided by ZITADEL to set up projects, applications, keys, and roles.
-   [ZITADEL Projects Documentation](https://zitadel.com/docs/guides/manage/console/projects)
+**How it works:**
+
+- **Auth Routes:**  
+  The plugin automatically creates routes for:
+
+  - `/auth/login`
+  - `/auth/callback`
+  - `/auth/logout`
+
+- **Context & Cookie:**  
+  After authentication, an `auth` object is added to your context, and a cookie containing the token is set for subsequent requests.
 
 <Callout type="note" title="Important">
-  Pylon requires a **API** application with the **Private JWT Key** type to
-  authenticate users and manage access control.
+  Ensure that your API application is configured to use a **Private JWT Key**
+  type for secure token management.
 </Callout>
+
+---
 
 ## Authentication Example
 
-Pylon makes authentication seamless by providing a straightforward integration with ZITADEL. Here's how you can set up authentication in your Pylon project:
+To protect sensitive data, use the `requireAuth` decorator. In the example below, any user trying to access the data must be authenticated:
 
 ```typescript
-import {app, auth, requireAuth} from '@getcronit/pylon'
-
-// Define your sensitive data service
+// Define a service for sensitive data
 class SensitiveData {
   @requireAuth()
   static async getData() {
@@ -40,27 +62,26 @@ class SensitiveData {
   }
 }
 
+// Expose the resolver via GraphQL
 export const graphql = {
   Query: {
     sensitiveData: SensitiveData.getData
   }
 }
 
-app.use('*', auth.initialize())
-
 export default app
 ```
 
-In this example, the `requireAuth()` decorator ensures that users are authenticated before accessing sensitive data. You can also specify roles to restrict access to certain data based on user permissions.
+In this setup, the `@requireAuth()` decorator ensures that only authenticated users can access the `getData` method. If the user is not authenticated, they will be redirected to the login flow at `/auth/login`.
 
 ---
 
 ## Authorization Example
 
-Authorization in Pylon allows you to control access to specific resources based on user roles and permissions. Here's how you can implement authorization in your Pylon project:
+If you need to restrict access based on roles, you can pass a roles array to the `requireAuth` decorator. For instance, the following example limits access to users with the `"admin"` role:
 
 ```typescript
-// Define your sensitive data service
+// Define a service for admin-only data
 class SensitiveData {
   @requireAuth({
     roles: ['admin']
@@ -70,72 +91,63 @@ class SensitiveData {
   }
 }
 
-// Define your GraphQL schema
+// Expose the resolver via GraphQL
 export const graphql = {
   Query: {
     sensitiveAdminData: SensitiveData.getAdminData
   }
 }
 
-app.use('*', auth.initialize())
-
 export default app
 ```
 
-In this example, the `requireAuth()` decorator ensures that only authenticated users with the "admin" role can access the `getAdminData()` function. You can customize roles and permissions according to your application's requirements.
+Only authenticated users who have the `"admin"` role will be allowed to access `getAdminData()`. Roles should be managed in your authentication provider (e.g., ZITADEL) for centralized control over permissions.
 
-Roles can be defined in ZITADEL and assigned to users to control access to specific resources. By integrating Pylon with ZITADEL, you can easily manage roles and permissions for your application.
-For more information on setting up roles in ZITADEL, refer to the [ZITADEL Roles Documentation](https://zitadel.com/docs/guides/manage/console/roles).
+---
 
-## Securing Routes
+## Securing Routes with Middleware
 
-Securing routes in Pylon involves enforcing authentication and, optionally, authorization for specific endpoints or routes. Here's how you can secure a route in your Pylon project:
+In addition to securing individual resolvers, you can enforce authentication and authorization for entire routes using the new `authMiddleware`. For example, to secure a specific REST endpoint:
 
 ```typescript
-import {auth, requireAuth} from '@getcronit/pylon'
+import {authMiddleware} from '@getcronit/pylon'
 
-// Define your sensitive data service
-class SensitiveData {
-  static async getData() {
-    return 'Sensitive Data'
-  }
-
-  @requireAuth({
+// Secure all routes under /admin to only allow users with the 'admin' role
+app.use(
+  '/admin',
+  authMiddleware({
     roles: ['admin']
   })
-  static async getAdminData() {
-    return 'Admin Data'
+)
+
+// Secure specific route to only allow users with the 'admin' role
+app.get(
+  '/secure',
+  authMiddleware({
+    roles: ['admin']
+  }),
+  c => {
+    return c.json({data: 'sensitive'})
   }
-}
-
-export const graphql = {
-  Query: {
-    sensitiveData: SensitiveData.getData,
-    sensitiveAdminData: SensitiveData.getAdminData
-  }
-}
-
-// Enforce authentication for all routes
-app.use('*', auth.initialize())
-
-// Secure a specific route with authentication and authorization
-app.use('/admin', auth.requireAuth({roles: ['admin']}))
-
+)
 export default app
 ```
 
-In this example, we're securing the `/admin` route to ensure that only authenticated users with the "admin" role can access it. By using the `requireAuth()` middleware from Pylon's authentication module, we enforce both authentication and authorization for this specific route.
+In this case, any request to the `/admin` route will first pass through `authMiddleware`, ensuring that the user is authenticated and has the required `"admin"` role.
+The same applies to the `/secure` route, which is secured with the `authMiddleware` middleware.
 
-You can customize the route and the required roles according to your application's requirements. This ensures that sensitive endpoints are protected, providing a secure environment for your users' data and resources.
+---
 
 ## Further Resources
 
-For detailed instructions on setting up projects, applications, keys, and roles in ZITADEL, refer to the ZITADEL documentation:
+For additional guidance on integrating with your authentication provider, please refer to the following resources:
 
 - [ZITADEL Projects Documentation](https://zitadel.com/docs/guides/manage/console/projects)
 - [ZITADEL Applications Documentation](https://zitadel.com/docs/guides/manage/console/applications#api)
 - [ZITADEL Roles Documentation](https://zitadel.com/docs/guides/manage/console/roles)
 
+---
+
 ## Conclusion
 
-With Pylon's built-in authentication and authorization features, you can easily secure your web services and control access to sensitive data, providing a seamless and secure user experience.
+With the new built-in authentication and authorization features, Pylon makes securing your web services simpler than ever. The automatic route creation, context management, and cookie handling streamline the login flow, while decorators and middleware give you granular control over access to your application’s data and routes. Enjoy a secure and seamless user experience with minimal configuration!
